# RepoAuditor

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  404.html  ActivateEpilog.py  Bootstrap.cmd  Bootstrap.sh  BootstrapEpilog.py  Build.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  GOVERNANCE.md  LICENSE  LICENSE.txt  MAINTAINERS.md  README.md  SECURITY.md  action.yml  default_config.yaml  index.html  minisign_key.pub  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md  release_sources.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/actions/initialize_validate_python/: action.yml
.github/actions/release_impl/: action.yml
.github/tools/: ShouldPeriodicWorkflowRun.py
.github/workflows/: CICD.yml  CICD_impl.yml  EndToEnd.yml  EndToEnd_impl.yml  RepoAuditor.yml  codeql.yml  standard.yaml  standard.yml
CONTRIBUTING/: index.html
DEVELOPMENT/: index.html
PAT/: index.html
config_file/: index.html
development/: index.html
docs/: CONTRIBUTING.md  DEVELOPMENT.md  PAT.md  config_file.md  custom_plugin.md  development.md  index.md  usage.md
search/: search_index.json
src/: AutoGitSemVer.yaml  BuildBinary.py
src/RepoAuditor/: CommandLineProcessor.py  Display.py  EntryPoint.py  ExecuteModules.py  Executor.py  Math.py  Module.py  Plugin.py  Query.py  Requirement.py  __init__.py
src/RepoAuditor/Impl/: ParallelSequentialProcessor.py
src/RepoAuditor/Plugins/: CommunityStandardsPlugin.py  GitHubCommunityStandardsPlugin.py  GitHubCustomizationPlugin.py  GitHubPlugin.py  GitHubRuleset.py  GitHubRulesetPlugin.py  GitHubRulesetsPlugin.py  Plugin1.py  Plugin2.py  ScientificSoftwarePlugin.py
src/RepoAuditor/Plugins/CommunityStandards/: CommunityStandardsQuery.py  Module.py
src/RepoAuditor/Plugins/CommunityStandards/Impl/: ExistsRequirementImpl.py
src/RepoAuditor/Plugins/CommunityStandards/Requirements/: CodeOfConduct.py  CodeOwners.py  Contributing.py  IssueTemplates.py  LicenseFile.py  PullRequestTemplates.py  (+2 more)
src/RepoAuditor/Plugins/GitHub/: ClassicBranchProtectionQuery.py  DefaultBranchQuery.py  Module.py  RulesetQuery.py  StandardQuery.py
src/RepoAuditor/Plugins/GitHubBase/: Module.py
src/RepoAuditor/Plugins/GitHubCommunityStandards/: CommunityStandardsQuery.py  Module.py
src/RepoAuditor/Plugins/GitHubCustomization/: CustomizationQuery.py  Module.py  Query.py  __init__.py
src/RepoAuditor/Plugins/GitHubRulesets/: Module.py  Query.py  RulesetQuery.py
src/RepoAuditor/Plugins/ScientificSoftware/: Module.py  ScientificSoftwareQuery.py
tests/: CommandLineProcessor_UnitTest.py  EntryPoint_UnitTest.py  ExecuteModules_UnitTest.py  Executor_UnitTest.py  Math_UnitTest.py  Module_UnitTest.py  Plugin_UnitTest.py  Query_UnitTest.py  Requirement_UnitTest.py  conftest.py
tests/Plugins/: CommunityStandards_EndToEndTest.py  GitHubCommunityStandards_EndToEndTest.py  GitHubCustomization_EndToEndTest.py  GitHubCustomization_UnitTest.py  GitHubEnterprise_EndToEndTest.py  GitHubModule_UnitTest.py  GitHubRuleset_EndToEndTest.py  GitHubRuleset_UnitTest.py  GitHub_EndToEndTest.py  ScientificSoftware_EndToEndTest.py  conftest.py  utilities.py
tests/Plugins/CommunityStandards/: CommunityStandardsQuery_UnitTest.py  CommunityStandards_UnitTest.py  ExistsRequirementImpl_UnitTest.py  GitHubCommunityStandards_UnitTest.py
tests/Plugins/GitHubCommunityStandards/: CommunityStandardsQuery_UnitTest.py  ExistsRequirementImpl_UnitTest.py  GitHubCommunityStandards_UnitTest.py
tests/Plugins/GitHubCustomization/: CutomizationQuery_UnitTest.py  ExistsRequirementImpl_UnitTest.py  GitHubCustomization_UnitTest.py
tests/Plugins/GitHubModule/: ClassicBranchProtectionQuery_UnitTest.py  ClassicValueRequirementImpl_UnitTest.py  DefaultBranchQuery_UnitTest.py  EnableRulesetRequirementImpl_UnitTest.py  GitHubModule_UnitTest.py  GitHubSession_UnitTest.py  RulesetRequirements_UnitTest.py  RulsesetQuery_UnitTest.py  StandardQuery_UnitTest.py  ValueRequrementImpl_UnitTest.py  fixtures.py
tests/Plugins/GitHubModule/ClassicBranchProtectionRequirements/: DismissStalePullRequestApprovals_UnitTest.py  EnsureStatusChecks_UnitTest.py  RequireApprovalMostRecentPush_UnitTest.py  RequireApprovals_UnitTest.py  RequireCodeOwnerReview_UnitTest.py  RequireUpToDateBranches_UnitTest.py
tests/Plugins/GitHubModule/DefaultBranchQueryRequirements/: Protected_UnitTest.py
tests/Plugins/GitHubModule/RulesetRequirements/: AllowMainlineForcePushesRule_UnitTest.py  BlockMainlineForcePushesRule_UnitTest.py  DismissStalePullRequestApprovalsRule_UnitTest.py  EnsureStatusChecksRule_UnitTest.py  RequireApprovalMostRecentPushRule_UnitTest.py  RequireApprovalsRule_UnitTest.py  RequireCodeOwnerReviewRule_UnitTest.py  RequireConversationResolutionRule_UnitTest.py  RequirePullRequests_UnitTest.py  RequireSignedCommits_UnitTest.py  RequireStatusChecksToPassRule_UnitTest.py  RequireUpToDateBranchesRule_UnitTest.py  __init__.py
tests/Plugins/GitHubModule/StandardQueryRequirements/: DependabotSecurityUpdates_UnitTest.py  Description_UnitTest.py  License_UnitTest.py  MergeCommitMessage_UnitTest.py  Private_UnitTest.py  SecretScanningPushProtection_UnitTest.py  SecretScanning_UnitTest.py  SquashMergeCommitMessage_UnitTest.py
tests/Plugins/GitHubModule/StandardRequirements/: MergeCommitMessage_UnitTest.py  SecretScanningPushProtection_UnitTest.py  SecretScanning_UnitTest.py  StandardValueRequirementImpl_UnitTest.py
tests/Plugins/GitHubRulesets/: EnableRulesetRequirementImpl_UnitTest.py  GitHubRuleset_UnitTest.py  RulsesetQuery_UnitTest.py
tests/Plugins/ScientificSoftware/: ScientificSoftwareQuery_UnitTest.py
tests/Plugins/__snapshots__/: CommunityStandards_EndToEndTest.ambr  GitHubCommunityStandards_EndToEndTest.ambr  GitHubCustomization_EndToEndTest.ambr  GitHubCustomization_UnitTest.py  GitHubEnterprise_EndToEndTest.ambr  GitHubRuleset_EndToEndTest.ambr  GitHub_EndToEndTest.ambr  GithubRuleset_UnitTest.py  ScientificSoftware_EndToEndTest.ambr
tests/__snapshots__/: ExecuteModules_UnitTest.ambr
troubleshooting/: index.html
usage/: index.html
(+113 files in other folders)
