# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

[build-system]
requires = ["setuptools >= 63.0"]
build-backend = "setuptools.build_meta"

# ----------------------------------------------------------------------
# |
# |  Project
# |
# ----------------------------------------------------------------------
[project]
name = "RepoAuditor"
description = "Audits repositories for best practices."

license = { text = "MIT" }

authors = [
    { name = "Scientific Software Engineering Center at Georgia Tech", email = "sse-center@gatech.edu" },
]

keywords = [
    # TODO: Add keywords specific to your project.
]

# https://pypi.org/classifiers/
classifiers = [
    # TODO: Add additional classifiers specific to your project.
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "dbrownell_Common",
    "pluggy == 1.*",
    "requests ~= 2.32",
    "typer ~= 0.9"
]

dynamic = [
    "version",
]

readme = "README.md"

[project.optional-dependencies]
dev = [
    "dbrownell_DevTools",
    "syrupy ~= 4.6",
]

package = [
    "build ~= 1.2",
    "cx_Freeze ~= 6.15",
    "twine ~= 5.1",
]

[project.urls]
Homepage = "https://github.com/gt-sse-center/RepoAuditor"
Documentation = "https://github.com/gt-sse-center/RepoAuditor"
Repository = "https://github.com/gt-sse-center/RepoAuditor"


[project.scripts]
RepoAuditor = "RepoAuditor:EntryPoint.app"

[project.entry-points.RepoAuditor]
GitHubPlugin = "RepoAuditor.Plugins.GitHubPlugin"

# ----------------------------------------------------------------------
# |
# |  black
# |
# ----------------------------------------------------------------------
[tool.black]
line-length = 100

# ----------------------------------------------------------------------
# |
# |  coverage
# |
# ----------------------------------------------------------------------
[tool.coverage.run]
omit = [
    "*/Impl/*",
]

# ----------------------------------------------------------------------
# |
# |  pylint
# |
# ----------------------------------------------------------------------
[tool.pylint.basic]
class-const-naming-style = "any"
function-naming-style = "PascalCase"
good-names = [
    "i",
    "j",
    "k",
    "ex",
    "Run",
    "_",
    "dm",                                   # added
    "f",                                    # added
]
method-naming-style = "any"
module-naming-style = "PascalCase"

[tool.pylint.design]
max-args = 10
max-parents = 15

[tool.pylint.main]
ignore-paths = [
    # Note that the pylint vscode extension has trouble with wrapping these patterns in quotes
    # (which is required to parse the file correctly). Because of this, each pattern must be
    # converted to a glob pattern and specified in the pylint vscode settings as well.
    "^.+?Tests/.*$",
]

[tool.pylint."messages control"]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "assignment-from-no-return",            # added
    "broad-except",                         # added
    "broad-exception-raised",               # added
    "cell-var-from-loop",                   # added
    "consider-using-f-string",              # added
    "import-outside-toplevel",              # added
    "line-too-long",                        # added
    "missing-function-docstring",           # added
    "subprocess-run-check",                 # added
    "super-with-arguments",                 # added
    "too-few-public-methods",               # added
    "unnecessary-lambda-assignment",        # added
    "unspecified-encoding",                 # added
]

# ----------------------------------------------------------------------
# |
# |  pyright
# |
# ----------------------------------------------------------------------
[tool.pyright]
exclude = [
    "**/*Tests/*",
    "**/Generated/*",
]

reportMissingImports = true
reportMissingTypeStubs = false

# ----------------------------------------------------------------------
# |
# |  pytest
# |
# ----------------------------------------------------------------------
[tool.pytest.ini_options]
addopts = "--snapshot-warn-unused"
python_files = [
    "**/*Test.py",
]

# ----------------------------------------------------------------------
# |
# |  setuptools
# |
# ----------------------------------------------------------------------
[tool.setuptools.dynamic]
version = { attr = "RepoAuditor.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
