[project]
name = "RepoAuditor"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Scientific Software Engineering Center at Georgia Tech", email = "sse-center@gatech.edu" },
]
requires-python = ">= 3.10"
dependencies = [
    "dbrownell-common>=0.14.10",
    "gitpython>=3.1.44",
    "pluggy>=1.5.0",
    "requests>=2.32.3",
    "typer>=0.15.3",
    "typer-config[yaml]>=1.4.2",
]
dynamic = ["version"]
classifiers = [
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
]

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/gt-sse-center/RepoAuditor"
Documentation = "https://github.com/gt-sse-center/RepoAuditor"
Repository = "https://github.com/gt-sse-center/RepoAuditor"

[project.scripts]
RepoAuditor = "RepoAuditor:EntryPoint.app"
repo_auditor = "RepoAuditor:EntryPoint.app"

[project.entry-points.RepoAuditor]
GitHubPlugin = "RepoAuditor.Plugins.GitHubPlugin"
CommunityStandardsPlugin = "RepoAuditor.Plugins.CommunityStandardsPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "autogitsemver>=0.8.0",
    "pre-commit>=4.2.0",
    "pyfakefs>=5.8.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.8",
    "syrupy>=4.9.1",
]

[tool.hatch.version]
path = "src/RepoAuditor/__init__.py"

[tool.pytest.ini_options]
addopts = "--verbose -vv --capture=no --cov=RepoAuditor --cov-fail-under=95.0"
python_files = [
    "**/*Test.py",
]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
exclude = ["tests/**"]

select = ["ALL"]

ignore = [
    "ANN002", # Missing type annotation for `*args`
    "ANN003", # Missing type annotation for `**kwargs`
    "BLE001", # Do not catch blind exception: `Exception`
    "COM812", # Trailing comma missing
    "D104", # Missing docstring in public package
    "D106", # Missing docstring in public nested class
    "D107", # Missing docstring in `__init__` method
    "D202", # No blank lines allowed after function docstring
    "E501", # Line too long
    "FBT003", # Boolean positional argument in function call
    "I001", # Import block is un-sorted or un-formatted
    "N802", # Function name `xxx` should be lowercase
    "N999", # Invalid module name
    "RSE102", # Unnecessary parentheses on raise exception
    "S101", # Use of assert detected
    "TC006", # Add quotes to type expression in `typing.cast()`
    "UP007", # Use `X | Y` for type annotations
    "UP032", # Use f-string instead of `format` call
    "UP038", # Use `X | Y` in `isinstance` call instead of `(X, Y)`
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 20
max-returns = 20
